examples/test/testpolicy2070.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2070
  namespace: namespace85
spec:
  podSelector:
    matchLabels:
      key4: value9
      key31: value20
      key29: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value38
      podSelector:
        matchLabels:
          key15: value5
          key30: value35
          key49: value46
